; ModuleID = '/home/carl/AnghaBench/nuklear/example/extr_file_browser.c_file_browser_free.c'
source_filename = "/home/carl/AnghaBench/nuklear/example/extr_file_browser.c_file_browser_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_browser = type { i32*, i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.file_browser*)* @file_browser_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @file_browser_free(%struct.file_browser* %0) #0 {
  %2 = alloca %struct.file_browser*, align 8
  store %struct.file_browser* %0, %struct.file_browser** %2, align 8
  %3 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %4 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %9 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  %11 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %12 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @dir_free_list(i32* %10, i32 %13)
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %17 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %28

20:                                               ; preds = %15
  %21 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %22 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %25 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @dir_free_list(i32* %23, i32 %26)
  br label %28

28:                                               ; preds = %20, %15
  %29 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %30 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %29, i32 0, i32 1
  store i32* null, i32** %30, align 8
  %31 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %32 = getelementptr inbounds %struct.file_browser, %struct.file_browser* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  %33 = load %struct.file_browser*, %struct.file_browser** %2, align 8
  %34 = call i32 @memset(%struct.file_browser* %33, i32 0, i32 24)
  ret void
}

declare dso_local i32 @dir_free_list(i32*, i32) #1

declare dso_local i32 @memset(%struct.file_browser*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
